--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Basic Setup</title>
-  <Link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+  <Link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
 </head>
 <body>
   
