--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <Link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
 </head>
 <body>
-  
+  <div id="app"></div>
 </body>
 </html>
